--- a/res/layout/activity_login.xml
+++ b/res/layout/activity_login.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".LoginActivity">
 
-    <!-- Title-->
+    <!-- Title -->
     <TextView
         android:id="@+id/tvLoginTitle"
         android:layout_width="match_parent"
@@ -15,89 +15,75 @@
         android:gravity="center"
         android:text="@string/login"
         android:textColor="@color/app_title_fg"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="28dp" />
+        android:textSize="16sp"
+        android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/tvUserIdLogin"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:text="@string/user_id"
-        android:textSize="20sp"
-        app:layout_constraintTop_toBottomOf="@id/tvLoginTitle"
-        tools:layout_editor_absoluteX="0dp" />
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:layout_margin="5dp"
+        android:orientation="vertical">
 
-    <EditText
-        android:id="@+id/etUserIdLogin"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:inputType="text"
-        android:textSize="25sp"
-        android:maxLength="12"
-        app:layout_constraintTop_toBottomOf="@id/tvUserIdLogin"
-        tools:layout_editor_absoluteX="9dp" />
+        <TextView
+            android:id="@+id/tvUserIdLogin"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/user_id"
+            android:textSize="16sp" />
 
-    <TextView
-        android:id="@+id/tvPasswordLogin"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:text="@string/password"
-        android:textSize="20sp"
-        app:layout_constraintTop_toBottomOf="@id/etUserIdLogin"
-        tools:layout_editor_absoluteX="0dp" />
+        <EditText
+            android:id="@+id/etUserIdLogin"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="text"
+            android:maxLength="12"
+            android:textSize="20sp" />
 
-    <EditText
-        android:id="@+id/etPasswordLogin"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:inputType="textPassword"
-        android:textSize="25sp"
-        app:layout_constraintTop_toBottomOf="@id/tvPasswordLogin"
-        tools:layout_editor_absoluteX="9dp" />
+        <TextView
+            android:id="@+id/tvPasswordLogin"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/password"
+            android:textSize="16sp" />
 
-    <CheckBox
-        android:id="@+id/cbRememberUserLogin"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:text="@string/remember_user"
-        app:layout_constraintTop_toBottomOf="@id/etPasswordLogin"
-        tools:layout_editor_absoluteX="16dp" />
+        <EditText
+            android:id="@+id/etPasswordLogin"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textPassword"
+            android:textSize="20sp" />
 
-    <CheckBox
-        android:id="@+id/cbRememberPasswordLogin"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="10dp"
-        android:text="@string/remember_password"
-        app:layout_constraintTop_toBottomOf="@id/cbRememberUserLogin"
-        tools:layout_editor_absoluteX="16dp" />
+        <CheckBox
+            android:id="@+id/cbRememberUserLogin"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/remember_user" />
+
+        <CheckBox
+            android:id="@+id/cbRememberPasswordLogin"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/remember_password" />
+
+    </LinearLayout>
 
     <Button
         android:id="@+id/btnHaveAcc"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/already_have_acc"
+        android:layout_gravity="center"
+        android:layout_marginTop="10dp"
+        android:layout_marginBottom="10dp"
         android:backgroundTint="@color/app_bg"
-        android:textColor="@color/app_fg"
-        app:layout_constraintBottom_toTopOf="@id/llBottomButtonsLogin"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/cbRememberPasswordLogin" />
+        android:text="@string/already_have_acc"
+        android:textColor="@color/app_fg" />
 
     <LinearLayout
         android:id="@+id/llBottomButtonsLogin"
         android:layout_width="match_parent"
         android:layout_height="55dp"
-        android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        tools:layout_editor_absoluteX="10dp">
+        android:orientation="horizontal">
 
         <Button
             android:id="@+id/btnExitLogin"
@@ -122,4 +108,4 @@
             android:textColor="@color/app_title_fg" />
     </LinearLayout>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
