--- a/res/layout/row_attendence.xml
+++ b/res/layout/row_attendence.xml
@@ -11,6 +11,8 @@
         android:gravity="center_vertical"
         android:padding="2dp"
         android:text="@string/default_sid"
+        android:clickable="true"
+        android:focusable="true"
         android:textSize="14sp" />
 
     <TextView
